--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width-device-width, initial-scake=1" />
     <link rel="stylesheet" href="style.css" />
-    <title>Flocking</title>
+    <title>Bird Flocking</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   </head>
   <body>
